fix: img max-width is 100%, Fixed overflow bug in restaurant.html

--- a/src/public/css/styles.scss
+++ b/src/public/css/styles.scss
@@ -262,6 +262,7 @@ img{
      object-fit: cover;
   -o-object-position: center;
      object-position: center;
+  max-width: 100%;
 }
 /* ======================= Focus Assistants ======================== */
 .list-item-describor{
